--- a/family-foods/src/Components/Header/Header.css
+++ b/family-foods/src/Components/Header/Header.css
@@ -1,3 +1,16 @@
 h1{
     color:black;
 }
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-middle, .header-right{
+    display: flex;
+}
+
+.header-middle > h1{
+    padding: 0 30px;
+}
