--- a/family-foods/src/Components/Header/Header.css
+++ b/family-foods/src/Components/Header/Header.css
@@ -1,16 +1,36 @@
-h1{
-    color:black;
-}
-
 .header{
     display: flex;
     justify-content: space-between;
+    padding: 15px 20px;
+    position: sticky;
+    background-color: white;
+    z-index: 100;
+    top: 0;
+    box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
 }
 
-.header-middle, .header-right{
+.header-middle{
     display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
-.header-middle > h1{
-    padding: 0 30px;
+.nav-link{
+    padding: 0 75px;
+    text-decoration: none;
+    color: black;
+}
+
+.nav-link:hover{
+    background-color: #eff2f5;
+    border-radius: 10px;
+    align-items: center;
+    padding: 0 75px;
+    border-bottom: none;
+    color:blue;
+}
+
+.header-right{
+    display: flex;
+    align-items: center;
 }
