--- a/family-foods/src/Components/Header/Header.css
+++ b/family-foods/src/Components/Header/Header.css
@@ -57,6 +57,16 @@
     align-items: center;
 }
 
+.header__profile{
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.header__profile > h4{
+    margin-left: 10px;
+}
+
 .header__profile > .MuiIconButton-root{
     color:gray;
 }
